<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainViewConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/paledarkblue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainViewImageAvatar"
        android:layout_width="201dp"
        android:layout_height="191dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246"
        app:srcCompat="@drawable/user_defaulta_vatar_foreground" />

    <TextView
        android:id="@+id/mainViewTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_view_label_username"
        android:textColor="@color/paleorange"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/mainViewButtonMakeAppointment"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/paleorange"
        android:backgroundTintMode="src_in"
        android:text="@string/main_view_button_make_appointment"
        android:textColor="@color/palelightred"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/mainViewButtonViewAppointments"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/paleorange"
        android:backgroundTintMode="src_in"
        android:text="@string/main_view_button_view_appointments"
        android:textColor="@color/palelightred"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/mainViewImageButtonSettings"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/palelightred"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/mainViewImageButtonUserProfile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/palelightred"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>